# mcp-server-azure-ai-agents

./: .gitignore  LICENSE  README.md  azure_agent_with_bing.py  azure_ai_agent_service_server.py  azure_search_server.py  pyproject.toml  requirements.txt  simple_test.py  test_mcp.py
examples/: cursor_mcp.json
src/azure_search_mcp/: connector.py  server.py
